# cosmos

./: .gitignore  Cargo.toml  README.md  project_structure
src/: lib.rs  main.rs  universe_metadata.json  universes.json
src/celestial/: graph.rs  mod.rs  node.rs  node_type.rs  position.rs
src/celestial/relation/: mod.rs  relation.rs
src/core/: mod.rs  universe.rs
src/storage/: mod.rs
src/ui/: camera_3d.rs  cosmos_view.rs  gui.rs  mod.rs  node_view.rs  renderer_3d.rs  scene_3d.rs  space_view.rs  start_menu.rs
src/ui/components/: connection_menu.rs  mod.rs  node_creator.rs  node_editor.rs
src/ui/effects/: mod.rs  particle.rs
src/ui/interactions/: drag_handler.rs  mod.rs  node_selector.rs
src/ui/views/: cosmos_view.rs  mod.rs  start_menu.rs
